Fix navbar offset for ScrollSpy and fix spacing on mobile

--- a/v3/src/js/views/modules/ModulePageContent.scss
+++ b/v3/src/js/views/modules/ModulePageContent.scss
@@ -18,7 +18,7 @@ $sticky-top: $navbar-height + $header-margin-top;
 
 .header {
   padding: 0 0 1rem;
-  margin-bottom: 2rem - $sticky-top;
+  margin-bottom: 1.5rem - $sticky-top;
   border-bottom: 1px solid var(--gray-lighter);
 
   p {
@@ -50,17 +50,13 @@ $sticky-top: $navbar-height + $header-margin-top;
   // Account for the fixed header's height. If this is not done, when side menu links are
   // clicked a portion of the content will be clipped by the fixed header.
   padding-top: $sticky-top;
-  margin-top: -2rem;
+  margin-top: 2rem - $sticky-top;
 }
 
 @include media-breakpoint-down(sm) {
   .pageTitle,
   .moduleCodeTitle {
     font-size: $font-size-xlg * $sm-font-size-ratio;
-  }
-
-  .header {
-    margin: 0.4rem 0 (1rem - $sticky-top - $navtab-height);
   }
 
   .sectionHeading,
@@ -70,11 +66,6 @@ $sticky-top: $navbar-height + $header-margin-top;
 
   .sectionHeading {
     padding-bottom: 0.3rem;
-  }
-
-  .section {
-    padding-top: $sticky-top + $navtab-height;
-    margin-top: -$sticky-top;
   }
 }
 
